fix header addon gap

--- a/utils/vara-ui/src/components/modal/modal.module.scss
+++ b/utils/vara-ui/src/components/modal/modal.module.scss
@@ -85,8 +85,6 @@
 }
 
 .heading {
-  margin: 0 16px 0 0;
-
   font-size: 24px;
   font-weight: 500;
   line-height: 24px;
@@ -95,6 +93,8 @@
   color: #000;
 
   &Container {
+    margin-right: 16px;
+
     display: flex;
     align-items: center;
     gap: 24px;
